blog update and article update

--- a/content/shreyank-journey.mdx
+++ b/content/shreyank-journey.mdx
@@ -13,3 +13,21 @@ I breate shopify and work all day on the shopify planet.So, if you see a whole l
 Enough said ! Lets gets on to this article.
 
 This article will be about how i started my website development journey, what inspired me to go into web development and all that. Hopefully, it can also give you some motivation for website development.
+
+
+To start with, I am an electrical engineer who switched his career completely to IT. I studied my bachelors from India in a well known college of BITS at vadodara. After getting good grades, I continued my journey to pursue for GATE examination to get the admission into IIT. Unfortunately, my hardwork had loose ends and i was not able to score well. I did not got admission into IIT. I tried getting into the job market and that is when i had the reality check that about industry standards, I was lacking a lot despite being one of the scholars at the university. After trying hard, I could not get a decent job. During that time I have seen lots of my friends were trying for canada for higher studies and seen them settling down abroad while earning handsome money. I did not want to go to foreign at all, but since all my friends were going, I gave a chance to IELTS to see how much i can score. Luckily I was able to get 6.5 bands without any extra efforts. I applied at couple of universities to pursue my further education. I got an invitation from University of windsor. Since, I did not have a lot in my hand, I finally decided to accept the offer and go abroad for pursuing my studies. Luckily my visa and everything happened quiet easily and quickly and I was in canada in no time.
+
+After coming to canada to pursue my masters in electrical and computer engineering, I was finding hard living and surviving in a completely new country where I did not even have any friends. I found roommates through a common friend to live with and thats how my journey in canada started. One of my roommate was web development expert and I used to see him as busy and working extensive hours and earning a handsome money while I was sitting at 0. After trying hard for even labour part time jobs, I could not got one. After a very long time, I got one offer from a labour work but for very short time. The owner of the company was very nice person. She offered me by saying since you are studying computers, could you help me update my product pictures on my website. It was that moment till then I knew nothing about how the website works. But eventhough, I said, Yes ! Thinking I will figure out by asking my roommate on how to do it. After going in detail it came to the attention that it is not as straight forward as i thought will be, but i thought to give it a try. My roommate suggested me to learn web development and offered me to go over to MDN and W3Schools site and start looking at HTML,CSS  and Javascript to cover up the basics. I started looking into it and found it very interesting on how we can write a tree like structure and define the elements and use CSS sheets to change colors and do animations. It caught my attention. While I was doing that, Unfortunately the part time job company laid me off from the work. I was deeply saddened by this incident and decided that I will master website development and will get the highest paid job in the market.  That was the moment which took me to the world of web development and from that moment I never looked back.
+
+I dedicated 10 hours of my time daily to learn all these things by my own. Interenet is a sea of knowledge and I learned how to swim by learning everything on my own. I used to go to library, 10 hours a day to learn website development and practice it on the self learn projects. After practicing for one year, I applied to couple of freelance jobs and did get a reply from one of the posts. I got selected to develop a webpage as per the Photoshop design using HTML,CSS and JS and offered $200 for creating such a page within the week. Since I was a noobie, I was working hard but could not figure out some things and it seems the project progressed through another channel and I lost my golden opportunity to score my maiden freelance project. I was little depressed as to see why things were not going my way. I worked hard more and learned a lot from that phase.
+
+I was getting a lot of interview calls but it seemed I was lacking in tech knowlege and was enable to clear those technical rounds due to that. I practiced more and finally in 2020 was able to get a role at one of the major company in canada. This was the first stepping stone for my success. I did a lot of small contract jobs before that taught me how the big projects actually works. From my first stepping stone, I learned a lot. I worked in a company for almost three years and had a inter company promotion as well. Finally in 2023, I changed my career to a better company. Also in the beginning of 2024, I established my own venture named [The SJ Development.](https://www.thesjdevelopment.com/)	I am getting a lot of work these days but when i look back at those days. I still have tears in my eyes but i am happy that i am in a good place today.
+
+> Pracitce makes you the perfect. However, successful you are, do not stop learning and keep practicing everyday.
+
+Hopefully, my journey is powerful enough to motivate some of you on your journey to website development. I will start going into details about some of the technology stuff from my next post but this is it from this post. Hopefully, you guys like this. Feel free to connect with me through Linkedin, Email or Twitter from the buttons below in dock.
+
+Thank you for reading !
+
+Cheers 🎉
+
